# Lo_toolkit

./: .gitignore  PLAN.md  README.md  pyproject.toml
lo_toolkit/: __init__.py  cli.py
lo_toolkit/audit/: __init__.py  bonus.py  cards.py  fdr.py  montecarlo.py  nullmodel.py  report.py  stats.py
lo_toolkit/behaviour/: __init__.py  anticollision.py  popularity.py
lo_toolkit/ev/: __init__.py  collision.py  evcalc.py  odds.py  rolldown.py  sales.py
lo_toolkit/falsify/: __init__.py  models.py  walkforward.py
lo_toolkit/games/: __init__.py  registry.py  ruleset.py
lo_toolkit/ingest/: __init__.py  schema.py
lo_toolkit/ingest/sources/: __init__.py  chance.py  csvfile.py  israel_lotto.py  nyopendata.py
lo_toolkit/portfolio/: __init__.py  covering.py  syndicate.py  wheels.py
lo_toolkit/sim/: __init__.py  engine.py
tests/: conftest.py  test_audit.py  test_behaviour.py  test_chance.py  test_cli.py  test_ev.py  test_falsify.py  test_ingest.py  test_israel_lotto.py  test_odds.py  test_portfolio.py  test_sim.py
